fixed layout issues

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -31,6 +31,11 @@ body {
 	padding: 20px;
 }
 
+.smallUserWindow {
+	display: none;
+	width: 20%;
+}
+
 .inputFieldContainer {
 	float: right;
 	margin-top: 15px;
@@ -73,4 +78,18 @@ body {
 
 .disconnected {
 	background: #C77474;
+}
+
+@media (max-width: 1200px) {
+  .smallUserWindow {
+    display: block;
+  }
+  
+  .chatWindow {
+  	width: 75%;
+  }
+  
+  .userWindowContainer {
+  	display: none;
+  }
 }
